testsuite/tests/ghc-regress/annotations/should_fail/Annfail04_Help.hs
module Annfail04_Help where

class Thing a where
  thing :: a